# unifi_poe

./: LICENSE  README.md  pyproject.toml
src/unifi_poe/: unifi.py  unifi_poe.py
